# python-injector

./: CMakeLists.txt  README.md  main.cpp
inject/: injector.cpp  injector.h
ptrace/: executor.cpp  executor.h  tracee.cpp  tracee.h
shellcode/: Makefile  linker.ld
shellcode/alloc/: entry.c
shellcode/c-runtime/: CMakeLists.txt
shellcode/c-runtime/include/: z_log.h  z_memory.h  z_std.h  z_sync.h  z_syscall.h
shellcode/c-runtime/src/: z_log.c  z_memory.c  z_std.c  z_sync.c  z_syscall.c
shellcode/free/: entry.c
shellcode/loader/: entry.c  payload.h  quit.c  quit.h
